[content] updated type tools lecture

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,10 @@ table th, table td {
   max-height: calc(90vh - 100px);
   object-fit: contain;
 }
+.slide iframe {
+  width: 100%;
+  height: 85vh;
+}
 .slide a {
   color: white;
 }
