--- a/css/styles.scss
+++ b/css/styles.scss
@@ -230,6 +230,10 @@ table{
 		max-height: calc(90vh - 100px);
 		object-fit: contain;
 	}
+	iframe{
+		width: 100%;
+		height: 85vh;
+	}
 	a{
 		color: white;
 	}
