[styles] add basic print styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,5 +404,11 @@ figure.small img {
     width: 100%;
   }
 }
+@media print {
+  body {
+    background: white;
+    color: black;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
