add day 2 materials

--- a/css/diagrams.scss
+++ b/css/diagrams.scss
@@ -96,6 +96,11 @@
 
 
 .interpolation{
+  margin: auto;
+  width: 90%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
   .arrow{
     display: flex;
     align-items: center;
@@ -103,9 +108,13 @@
     grid-column: span 1;
   }
 }
+
 .interp{
+  display: flex;
+  align-items: center;
+  text-align: center;
   font-size: 200px;
-  grid-column: span 2;
+  grid-column-end: span 2;
 }
 
 
